media/bazarr/templates/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
spec:
  selector:
    matchLabels:
      app: bazarr
  replicas: 1
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:1.4.3
          ports:
            - containerPort: 6767
          volumeMounts:
            - name: data
              mountPath: /config
            - name: movies
              mountPath: /movies
            - name: series
              mountPath: /tv
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bazarr-data
        - name: movies
          persistentVolumeClaim:
            claimName: bazarr-movies
        - name: series
          persistentVolumeClaim:
            claimName: bazarr-series
