media/bazarr/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
spec:
  serviceName: bazarr
  selector:
    matchLabels:
      app: bazarr
  replicas: 1
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:1.4.5
          ports:
            - containerPort: 6767
          volumeMounts:
            - name: data
              mountPath: /config
            - name: media
              mountPath: /mnt/media
              readOnly: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bazarr-data
        - name: media
          nfs:
            path: /mnt/media
            server: nas.internal
